# one-button-keyboard

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.gitea/workflows/: ci.yaml  push-request.yaml
.github/workflows/: ci.yaml  push-request.yaml
scripts/: README.md  hid_code.py  requirements.txt  setup-key.py
src/: config.rs  data_sorage.rs  main.rs  report.rs
